sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:14: error: not found: value i
    i=0;
    ^AlgCombSort:15: error: not found: value i
    while(i+ecart<getNombreValeurs())
          ^AlgCombSort:17: error: not found: value i
      if(plusPetit(i+ecart,i))
                   ^AlgCombSort:17: error: not found: value i
      if(plusPetit(i+ecart,i))
                           ^AlgCombSort:19: error: not found: value echanger
        echanger(i+ecart,i);
        ^AlgCombSort:19: error: not found: value i
        echanger(i+ecart,i);
                 ^AlgCombSort:19: error: not found: value i
        echanger(i+ecart,i);
                         ^AlgCombSort:20: error: not found: value i
        i+=1;
        ^