sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  
  var ecart=getNombreValeurs();
  var test=true;
  while(test || ecart>1)
  {
    test=false;
    if(ecart>1)
    {
      ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
    }
    
    i=0;
    while(i+ecart<getNombreValeurs())
    {
      if(plusPetit(i+ecart,i))
      {
        echanger(i+ecart,i);
        i+=1;
        test=true;
      }
    }
  }
}